# HSE_ML

./: HW1_Regression_with_inference_base_pt1.ipynb  README.md  pyproject.toml
app/: main.py
app/.streamlit/: config.toml
app/files/: full_model_pipeline.pkl  linear_model_results.pkl
app/pages/: eda.py  model.py
app/utils/: utils.py
notebooks/: HW1_Regression_with_inference_base_pt1.ipynb
